--- a/style.css
+++ b/style.css
@@ -1,18 +1,47 @@
 :root {
-    --mainFont : 'Krub', sans-serif;
+    --mainFont: 'Krub', sans-serif;
     --white: #ffffff;
     --primary: #FFC107;
     --secondary: #0097A7;
-    --gray : #757575;
-    --dark : #212121;
+    --gray: #757575;
+    --dark: #212121;
 }
+
 html {
     box-sizing: border-box;
     min-height: 100%;
 }
-*, *:before, *:after {
+
+*,
+*:before,
+*:after {
     box-sizing: inherit;
 }
+
 body {
     font-family: var(--mainFont);
+}
+
+.main-navigation {
+    max-width: 1200px;
+    margin: 0 auto;
+    padding: 1rem 0;
+
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+@media (min-width:768px) {
+    .main-navigation {
+        flex-direction: row;
+        justify-content: space-between;
+    }
+}
+
+.main-navigation a {
+    color: var(--dark);
+    text-decoration: none;
+    font-size: 1.4rem;
+    margin-bottom: 1.4rem;
 }
