--- a/css/style.css
+++ b/css/style.css
@@ -22,6 +22,31 @@ body {
     font-family: var(--mainFont);
 }
 
+.button {
+    background-color: var(--secondary);
+    padding: .5rem 3rem;
+    border-radius: 5px;
+    display: inline-block;
+    margin-top: .5rem;
+    font-weight: 700;
+    text-decoration: none;
+    text-transform: uppercase;
+    font-size: 1.2rem;
+    border: none;
+    color: var(--white);
+}
+
+.container {
+    margin: 2rem auto 3rem auto;
+    max-width: 1200px;
+    padding: 2rem;
+    background-color: var(--white);
+    -webkit-box-shadow: 0px 4px 12px -1px rgba(0,0,0,0.45);
+    -moz-box-shadow: 0px 4px 12px -1px rgba(0,0,0,0.45);
+    box-shadow: 0px 4px 12px -1px rgba(0,0,0,0.45);
+    border-radius: 1rem;
+}
+
 .main-navigation {
     max-width: 1200px;
     margin: 0 auto;
