--- a/css/style.css
+++ b/css/style.css
@@ -36,6 +36,12 @@ body {
     font-size: 1.2rem;
     border: none;
     color: var(--white);
+    transition: background-color .3s ease;
+    cursor: pointer;
+}
+
+.button:hover {
+    background-color: rgb(1, 123, 136);
 }
 
 .container {
@@ -151,4 +157,59 @@ p {
 
 .icons i {
     font-size: 2rem;
+}
+
+form {
+    background-color: var(--gray);
+    padding: 2rem;
+    border-radius: 1rem;
+}
+
+@media (min-width:768px) {
+    form {
+        max-width: 800px;
+        margin: 0 auto;
+    }
+
+    .form-container {
+        display: flex;
+        justify-content: space-between;
+        flex-wrap: wrap;
+    }
+
+    .field {
+        flex: 0 0 calc(50% - 1rem);
+    }
+}
+
+.field {
+    display: flex;
+    margin-bottom: 1rem;
+    align-items: center;
+}
+
+.field label {
+    flex: 0 0 90px;
+    color: var(--white);
+}
+
+.field input[type="text"],
+.field input[type="tel"],
+.field input[type="mail"],
+.field textarea {
+    flex: 1;
+    height: 2.4rem;
+}
+
+.w-100 {
+    flex: 0 0 100%;
+}
+
+.field textarea {
+    height: 4rem;
+}
+
+.submit-form {
+    display: flex;
+    justify-content: flex-end;
 }
